<resources>
    <string name="app_name">ecommerce</string>
    <string name="join_now">Join Now</string>
    <string name="button">Button</string>
    <string name="already_have_an_account_log_in">Already have an account log in</string>
    <string name="join">JOIN</string>
    <string name="logo">logo</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_name">enter your name</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="i_am_not_admin">I am not Admin</string>
    <string name="forget_my_password">Forget my password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_am_admin">I am Admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>