<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".RegistreActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        app:srcCompat="@drawable/app_logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/ed_register_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_name"
        android:hintTextColor="#616161"
        android:inputType="text"
        android:padding="15dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ed_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_register_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_phone_number"
        android:hintTextColor="#616161"
        android:inputType="phone"
        android:padding="15dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_register_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_password"
        android:hintTextColor="#616161"
        android:inputType="textPassword"
        android:padding="15dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_register_password"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:text="@string/create_account"
        app:backgroundTint="#dfe3ee"
        app:cornerRadius="20dp"
        android:focusable="true" />


</RelativeLayout>