<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome"
    tools:context=".Buyers.MainActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/applogo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:clickable="true"
        android:layout_above="@+id/seller_begin"
        android:focusable="true"
        android:text="@string/already_have_an_account_log_in"
        app:backgroundTint="#dfe3ee"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/join"
        app:backgroundTint="#dfe3ee" />

    <TextView
        android:id="@+id/seller_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Want to become a seller"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        />


</RelativeLayout>